--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "release": "standard-version",
     "lint": "eslint --quiet --fix --ext .js,.ts,.tsx .",
     "format": "prettier --loglevel error --write \"./**/*.{js,ts,tsx,json}\"",
-    "dev:schema": "pnpm -F schema dev",
-    "dev:server": "pnpm -F server start:debug",
-    "dev:client": "pnpm -F client dev",
-    "dev:docs": "pnpm -F docs start",
-    "dev": "env-cmd --silent concurrently --kill-others \"pnpm run dev:*\"",
-    "build:schema": "pnpm -F schema build",
-    "build:server": "pnpm -F server build",
-    "build:client": "pnpm -F client build",
-    "build:docs": "pnpm -F docs build",
-    "build": "env-cmd --silent concurrently \"pnpm run build:*\"",
-    "start:server": "pnpm -F server start:prod",
-    "start:client": "pnpm -F client start",
-    "start:docs": "pnpm -F docs serve",
-    "start": "env-cmd --silent concurrently --kill-others \"pnpm run start:*\""
+    "dev:schema": "yarn workspace @reactive-resume/schema dev",
+    "dev:server": "yarn workspace @reactive-resume/server start:debug",
+    "dev:client": "yarn workspace @reactive-resume/client dev",
+    "dev:docs": "yarn workspace docs start",
+    "dev": "env-cmd --silent concurrently --kill-others \"yarn run dev:*\"",
+    "build:schema": "yarn workspace @reactive-resume/schema build",
+    "build:server": "yarn workspace @reactive-resume/server build",
+    "build:client": "yarn workspace @reactive-resume/client build",
+    "build:docs": "yarn workspace docs build",
+    "build": "env-cmd --silent concurrently \"yarn run build:*\"",
+    "start:server": "yarn workspace @reactive-resume/server start:prod",
+    "start:client": "yarn workspace @reactive-resume/client start",
+    "start:docs": "yarn workspace docs serve",
+    "start": "env-cmd --silent concurrently --kill-others \"yarn run start:*\""
   },
   "dependencies": {
     "concurrently": "^7.1.0",
