--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@reactive-resume/client",
+  "version": "3.4.5",
   "scripts": {
     "dev": "react-env --prefix PUBLIC -- next dev",
     "build": "next build && npm run sitemap",
@@ -53,7 +54,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
-    "@reactive-resume/schema": "workspace:*",
     "@tailwindcss/typography": "^0.5.2",
     "@types/downloadjs": "^1.4.3",
     "@types/lodash": "^4.14.182",
