--- a/schema/package.json
+++ b/schema/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@reactive-resume/schema",
+  "version": "3.4.5",
   "type": "commonjs",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
