--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@reactive-resume/server",
+  "version": "3.4.5",
   "scripts": {
     "build": "rimraf dist && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -53,7 +54,6 @@
   "devDependencies": {
     "@nestjs/cli": "^8.2.5",
     "@nestjs/schematics": "^8.0.10",
-    "@reactive-resume/schema": "workspace:*",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
