--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,9 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
+  "resolutions": {
+    "**/@types/react": "17.0.2"
+  },
   "dependencies": {
     "@algolia/client-search": "^4.13.0",
     "@docusaurus/core": "2.0.0-beta.18",
