--- a/docs/package.json
+++ b/docs/package.json
@@ -13,9 +13,6 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
-  "resolutions": {
-    "**/@types/react": "17.0.2"
-  },
   "dependencies": {
     "@algolia/client-search": "^4.13.0",
     "@docusaurus/core": "2.0.0-beta.18",
@@ -23,8 +20,8 @@
     "@mdx-js/react": "1.6.22",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.3.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "browserslist": {
     "production": [
@@ -39,7 +36,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "17.0.2",
+    "@types/react": "^18.0.0",
     "typescript": "^4.6.4"
   }
 }
