--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "react-env --prefix PUBLIC -- next dev",
     "build": "next build && npm run sitemap",
-    "start": "react-env --prefix PUBLIC -- next start",
+    "start": "react-env --prefix PUBLIC -- next start -p 5000",
     "lint": "next lint --fix",
     "sitemap": "next-sitemap --config next-sitemap.config.js"
   },
