--- a/.env.example
+++ b/.env.example
@@ -5,15 +5,17 @@ PUBLIC_SERVER_URL=http://localhost:3000/api
 PUBLIC_GOOGLE_CLIENT_ID=
 
 # Server + Database
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+## if DATABASE_URL is commented, following are required.
+# POSTGRES_HOST=
+# POSTGRES_USER=
+# POSTGRES_PASSWORD=
+# POSTGRES_DB=
+# POSTGRES_PORT=5432
+DATABASE_URL=
+POSTGRES_SSL_CERT=
 
 # Server
 SECRET_KEY=
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_SSL_CERT=
 JWT_SECRET=
 JWT_EXPIRY_TIME=604800
 GOOGLE_CLIENT_SECRET=
