--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,8 @@
   "name": "@reactive-resume/server",
   "version": "3.4.5",
   "scripts": {
+    "heroku-postbuild": "npm run build",
+    "heroku-cleanup": "npx playwright install",
     "build": "rimraf dist && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
