--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     }
   },
   "scripts": {
+    "heroku-postbuild": "npx playwright install",
+    "heroku-cleanup": "npx playwright install",
     "prepare": "husky install",
     "release": "standard-version",
     "lint": "eslint --quiet --fix --ext .js,.ts,.tsx .",
