--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     }
   },
   "scripts": {
+    "heroku-postbuild": "npm install -g env-cmd concurrently",
     "heroku-cleanup": "rm -rf ./node_modules ./server/node_modules ./client/node_modules ./schema/node_modules",
     "prepare": "husky install",
     "release": "standard-version",
@@ -28,7 +29,7 @@
     "build": "env-cmd --silent concurrently \"yarn run build:*\"",
     "start:server": "yarn workspace @reactive-resume/server start:prod",
     "start:client": "yarn workspace @reactive-resume/client start",
-    "start": "yarn run start:*"
+    "start": "env-cmd --silent concurrently --kill-others \"yarn run start:*\""
   },
   "dependencies": {
     "concurrently": "^7.1.0",
