--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     }
   },
   "scripts": {
+    "heroku-cleanup": "rm -rf ./node_modules ./server/node_modules ./client/node_modules ./schema/node_modules && npm install -g env-cmd concurrently react-env",
     "prepare": "husky install",
     "release": "standard-version",
     "lint": "eslint --quiet --fix --ext .js,.ts,.tsx .",
